<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_test">Test</string>
    <string name="title_batches">Batches</string>
    <string name="title_library">Library</string>
    <string name="title_books">Books</string>

    <string name="api_key">nmGxbcMchzHi5Qjvr3EAyfNMN3KS9CTXQGJhBRu</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="change_layout_manager">Change Layout</string>
</resources>