<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_test" />

    <item
        android:id="@+id/navigation_batches"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_batches" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_books" />

</menu>